crates/agenomic-cli/tests/snapshots/init_update__update_no_change.snap
---
source: crates/agenomic-cli/tests/init_update.rs
expression: "String::from_utf8_lossy(&out.stdout)"
---
no changes; bundle is up to date
